--- a/zepeli.html
+++ b/zepeli.html
@@ -63,9 +63,9 @@
     <br>
     <p>Com podem veure a la taula, la majoria de les mercaderies es transporten per carretera quan es tracta de transport nacional als EUA. Això és gràcies al fet que té el punt mitjà entre velocitat, preu, i capacitat de càrrega, a més que no requereix molta infraestructura per a moure la mercaderia.</p>    
 <br>
-    <img src="Imatges/Gràfic Percentatge de tones transportades a nivell nacional.png">
+    <img src="Imatges 1/Gràfic Percentatge de tones transportades a nivell nacional.png">
     <br>
-    <img src="Imatges/Gràfic Percentatge del valor de bens transportats a nivell nacional.png">
+    <img src="Imatges 1/Gràfic Percentatge del valor de bens transportats a nivell nacional.png">
     <p><strong>Transport Internacional dels EEUU el 2023 (Importacions i Exportacions) per Tones/Valor de Mercaderia. </strong><a href="https://www.bts.gov/browse-statistical-products-and-data/freight-facts-and-figures/us-international-freight-trade">U.S.-International Freight Trade by Transportation Mode | Bureau of Transportation Statistics</a></p>
     <p>Dades de les tones transportades i el preu de la mercaderia transportada per tipus de transport en exportacion i importacions als EEUU.</p>
     <table>
@@ -100,9 +100,9 @@
     Com podem veure prácticament totes les mercaderies provinents de l'extranger es transporten amb vaixell i avió. En el cas dels Estats Units hi ha una part considerable que venen de Canadá o Mèxic que hi arriben per terra. 
 </p>
 <br>
-<img src="Imatges/Gràfic Percentatge de tones transportades a nivell internacional.png">
+<img src="Imatges 1/Gràfic Percentatge de tones transportades a nivell internacional.png">
 <br>
-<img src="Imatges/Gràfic Percentatge del valor de bens transports a nivell internacional.png">
+<img src="Imatges 1/Gràfic Percentatge del valor de bens transports a nivell internacional.png">
 <p>
     Les dues opcions principals a escala internacional, l'avió i el vaixell, són extrems oposats. El vaixell és barat i té molta capacitat de càrrega, però és lent i contaminant. L'avió és ràpid, però és molt més car i té menys capacitat. A més necessiten molta infraestructura i estan limitats per la geografia de cada regió. No hi ha cap equivalent al camió en el transport a llargues distàncies.</p>
 <p>
